--- a/Chapter1.ipynb
+++ b/Chapter1.ipynb
@@ -46,7 +46,7 @@
         "\n",
         "ということで、先に\n",
         "\n",
-        "* [Numpy](https://student.codexa.net/contents/index/1)\n",
+        "* [Numpy 入門](https://student.codexa.net/contents/index/1)\n",
         "* [Matplotlib 入門](https://student.codexa.net/contents/index/7)\n",
         "\n",
         "を先に受講することにします。"
