--- a/Chapter1.ipynb
+++ b/Chapter1.ipynb
@@ -42,7 +42,7 @@
         "\n",
         "## 事前知識\n",
         "* 特に事前知識は必要なし\n",
-        "* Numpy/Matploblib入門コースを事前に受講するのがおすすめ\n",
+        "* Numpy/Matploblib入門コースを事前に受講すると補講が理解しやすくなるためお勧め\n",
         "\n",
         "ということで、先に\n",
         "\n",
@@ -50,6 +50,36 @@
         "* [Matplotlib 入門](https://student.codexa.net/contents/index/7)\n",
         "\n",
         "を先に受講することにします。"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "exFFSm75WDAV",
+        "colab_type": "text"
+      },
+      "source": [
+        "#### 上記コースを受講したので本コースを進めます"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "e6PrrCjdWMrg",
+        "colab_type": "text"
+      },
+      "source": [
+        "# 統計とは？\n",
+        "統計には、以下の種類がある\n",
+        "\n",
+        "#### 記述統計\n",
+        "データの平均や散らばり度を計算して、\n",
+        "データの示す傾向や性質を知る。\n",
+        "  \n",
+        "#### 推測統計\n",
+        "データの一部を分析することで、\n",
+        "全体を推測すること。\n",
+        "\n"
       ]
     },
     {
